create a feedback page and fix a home page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
-@import 'normalize.css';
+@import 'reset-css';
 @import 'variables.scss';
+@import 'general';
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Unbounded&display=swap');
 
 html {
@@ -55,6 +56,7 @@ body {
 
 .info {
     padding-top: 80px;
+    padding-bottom: 20px;
     &__inner {
         background-color: var(--color-secondary-bg);
         border-radius: 30px;
@@ -88,3 +90,6 @@ body {
         }
     }
 }
+
+
+@import 'reviews';
